--- a/src/meetup-fullstack-core/package.json
+++ b/src/meetup-fullstack-core/package.json
@@ -1,94 +1,93 @@
 {
-  "name": "meetup-app",
-  "version": "0.1.0",
-  "description": "feedback meetup fullstack",
-  "private": true,
-  "author": "Fábio Damasceno",
-  "contributors": [
-    {
-      "name": "Fábio Damasceno"
+    "name": "meetup-app",
+    "version": "0.1.0",
+    "description": "feedback meetup fullstack",
+    "private": true,
+    "author": "Fábio Damasceno",
+    "contributors": [{
+        "name": "Fábio Damasceno"
+    }],
+    "browserify": {
+        "transform": [
+            "browserify-shim"
+        ]
+    },
+    "browser": {
+        "jquery": "./node_modules/jquery/dist/jquery.min.js",
+        "handlebars": "./node_modules/handlebars/dist/handlebars.min.js",
+        "materialize-js": "./node_modules/materialize-css/bin/materialize.js"
+    },
+    "browserify-shim": {
+        "jquery": "$",
+        "handlebars": "handlebars",
+        "materialize-js": {
+            "exports": "Materialize",
+            "depends": [
+                "jquery:jQuery"
+            ]
+        }
+    },
+    "devDependencies": {
+        "babel": "^6.5.2",
+        "babel-core": "^6.7.7",
+        "babel-plugin-syntax-async-functions": "^6.5.0",
+        "babel-plugin-transform-regenerator": "^6.6.5",
+        "babel-plugin-transform-runtime": "^6.7.5",
+        "babel-polyfill": "^6.7.4",
+        "babel-preset-es2015": "^6.6.0",
+        "babel-runtime": "^6.6.1",
+        "babelify": "^7.2.0",
+        "browser-sync": "^2.12.4",
+        "browserify": "^13.0.0",
+        "browserify-shim": "^3.8.12",
+        "chai": "^3.5.0",
+        "del": "^2.2.0",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^3.1.0",
+        "gulp-babel": "^6.1.2",
+        "gulp-bower": "0.0.13",
+        "gulp-bump": "^2.1.0",
+        "gulp-concat": "^2.6.0",
+        "gulp-concat-css": "^2.2.0",
+        "gulp-env": "^0.4.0",
+        "gulp-help": "^1.6.1",
+        "gulp-htmlmin": "^1.3.0",
+        "gulp-inject": "^4.0.0",
+        "gulp-istanbul": "^0.10.4",
+        "gulp-livereload": "^3.8.1",
+        "gulp-load-plugins": "^1.2.2",
+        "gulp-mocha": "^2.2.0",
+        "gulp-nightwatch": "^0.2.9",
+        "gulp-notify": "^2.2.0",
+        "gulp-plumber": "^1.1.0",
+        "gulp-rev": "^7.0.0",
+        "gulp-rev-replace": "^0.4.3",
+        "gulp-sass": "^2.3.1",
+        "gulp-sourcemaps": "^2.0.0-alpha",
+        "gulp-uglify": "^1.5.3",
+        "gulp-useref": "^3.0.8",
+        "gulp-util": "^3.0.7",
+        "gulp-webserver": "^0.9.1",
+        "hbsfy": "^2.7.0",
+        "istanbul": "^0.4.3",
+        "jasmine-core": "^2.4.1",
+        "jpegtran-bin": "^3.1.0",
+        "mocha": "^2.4.5",
+        "mocha-multi": "^0.9.0",
+        "sinon": "^1.17.4",
+        "vinyl-buffer": "^1.0.0",
+        "vinyl-source-stream": "^1.1.0",
+        "watchify": "^3.7.0",
+        "yargs": "^4.6.0"
+    },
+    "dependencies": {
+        "handlebars": "^4.0.4",
+        "lodash": "^3.10.1",
+        "materialize-css": "^0.97.5"
+    },
+    "scripts": {
+        "start": "npm install && gulp serve:dev",
+        "serve": "gulp serve:dev",
+        "build": "gulp build"
     }
-  ],
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
-  "browser": {
-    "jquery": "./node_modules/jquery/dist/jquery.min.js",
-    "handlebars": "./node_modules/handlebars/dist/handlebars.min.js",
-    "materialize-js": "./node_modules/materialize-css/bin/materialize.js"
-  },
-  "browserify-shim": {
-    "jquery": "$",
-    "handlebars": "handlebars",
-    "materialize-js": {
-      "exports": "Materialize",
-      "depends": [
-        "jquery:jQuery"
-      ]
-    }
-  },
-  "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.7.7",
-    "babel-plugin-syntax-async-functions": "^6.5.0",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-runtime": "^6.6.1",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.12.4",
-    "browserify": "^13.0.0",
-    "browserify-shim": "^3.8.12",
-    "chai": "^3.5.0",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-bower": "0.0.13",
-    "gulp-bump": "^2.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-concat-css": "^2.2.0",
-    "gulp-env": "^0.4.0",
-    "gulp-help": "^1.6.1",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-inject": "^4.0.0",
-    "gulp-istanbul": "^0.10.4",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.2.2",
-    "gulp-mocha": "^2.2.0",
-    "gulp-nightwatch": "^0.2.9",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rev": "^7.0.0",
-    "gulp-rev-replace": "^0.4.3",
-    "gulp-sass": "^2.3.1",
-    "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-uglify": "^1.5.3",
-    "gulp-useref": "^3.0.8",
-    "gulp-util": "^3.0.7",
-    "gulp-webserver": "^0.9.1",
-    "hbsfy": "^2.7.0",
-    "istanbul": "^0.4.3",
-    "jasmine-core": "^2.4.1",
-    "jpegtran-bin": "^3.1.0",
-    "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.0",
-    "sinon": "^1.17.4",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0",
-    "yargs": "^4.6.0"
-  },
-  "dependencies": {
-    "handlebars": "^4.0.4",
-    "lodash": "^3.10.1",
-    "materialize-css": "^0.97.5"
-  },
-  "scripts": {
-    "serve": "npm install && npm run-script bower && node .\\node_modules\\gulp\\bin\\gulp.js serve:dev",
-    "build": "npm install && npm run-script bower && node .\\node_modules\\gulp\\bin\\gulp.js build"
-  }
 }
