--- a/src/meetup-fullstack-core/project.json
+++ b/src/meetup-fullstack-core/project.json
@@ -43,6 +43,7 @@
   },
 
   "scripts": {
+    "prepublish": [ "npm install", "npm run build"],
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   }
 }
