Add some magic sauce to the right place

--- a/src/meetup-fullstack-core/Properties/launchSettings.json
+++ b/src/meetup-fullstack-core/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:60115/",
+      "applicationUrl": "http://localhost:33366/",
       "sslPort": 0
     }
   },
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "meetup_fullstack_core": {
+    "WebApplication2": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
