--- a/src/meetup-fullstack-core/appsettings.json
+++ b/src/meetup-fullstack-core/appsettings.json
@@ -1,5 +1,10 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=meetup-fullstack;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
   }
 }
